--- a/W1/W1A3/Gradient_Checking.ipynb
+++ b/W1/W1A3/Gradient_Checking.ipynb
@@ -51,9 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ruben\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.5\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from testCases import *\n",
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -157,6 +166,7 @@
     "    # J = \n",
     "    # YOUR CODE STARTS HERE\n",
     "    \n",
+    "    J = theta * x\n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
     "    \n",
@@ -165,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -181,7 +191,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J = 8\n",
+      "\u001b[92m All tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "x, theta = 2, 4\n",
     "J = forward_propagation(x, theta)\n",
@@ -201,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -235,6 +254,7 @@
     "    # dtheta = \n",
     "    # YOUR CODE STARTS HERE\n",
     "    \n",
+    "    dtheta = x\n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
     "    \n",
@@ -243,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -259,7 +279,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dtheta = 3\n",
+      "\u001b[92m All tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "x, theta = 3, 4\n",
     "dtheta = backward_propagation(x, theta)\n",
@@ -307,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -340,13 +369,18 @@
     "    \n",
     "    # Compute gradapprox using right side of formula (1). epsilon is small enough, you don't need to worry about the limit.\n",
     "    # (approx. 5 lines)\n",
-    "    # theta_plus =                                 # Step 1\n",
-    "    # theta_minus =                                # Step 2\n",
+    "    # theta_plus =                                # Step 1\n",
+    "    # theta_minus =                               # Step 2\n",
     "    # J_plus =                                    # Step 3\n",
     "    # J_minus =                                   # Step 4\n",
     "    # gradapprox =                                # Step 5\n",
     "    # YOUR CODE STARTS HERE\n",
     "    \n",
+    "    theta_plus = theta + epsilon\n",
+    "    theta_minus = theta - epsilon\n",
+    "    J_plus = forward_propagation(x, theta_plus)\n",
+    "    J_minus = forward_propagation(x, theta_minus)\n",
+    "    gradapprox = (J_plus - J_minus) / (2 * epsilon)\n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
     "    \n",
@@ -355,6 +389,7 @@
     "    # grad =\n",
     "    # YOUR CODE STARTS HERE\n",
     "    \n",
+    "    grad = backward_propagation(x, theta)\n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
     "    \n",
@@ -364,6 +399,9 @@
     "    # difference =                                # Step 3'\n",
     "    # YOUR CODE STARTS HERE\n",
     "    \n",
+    "    numerator = np.linalg.norm(grad - gradapprox)\n",
+    "    denominator = np.linalg.norm(grad) + np.linalg.norm(gradapprox)\n",
+    "    difference = numerator / denominator\n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
     "    if print_msg:\n",
@@ -377,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -393,7 +431,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mYour backward propagation works perfectly fine! difference = 7.814075313343006e-11\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "x, theta = 3, 4\n",
     "difference = gradient_check(x, theta, print_msg=True)\n"
@@ -446,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,13 +578,13 @@
     "    \n",
     "    dA2 = np.dot(W3.T, dZ3)\n",
     "    dZ2 = np.multiply(dA2, np.int64(A2 > 0))\n",
-    "    dW2 = 1. / m * np.dot(dZ2, A1.T) * 2\n",
+    "    dW2 = 1. / m * np.dot(dZ2, A1.T)\n",
     "    db2 = 1. / m * np.sum(dZ2, axis=1, keepdims=True)\n",
     "    \n",
     "    dA1 = np.dot(W2.T, dZ2)\n",
     "    dZ1 = np.multiply(dA1, np.int64(A1 > 0))\n",
     "    dW1 = 1. / m * np.dot(dZ1, X.T)\n",
-    "    db1 = 4. / m * np.sum(dZ1, axis=1, keepdims=True)\n",
+    "    db1 = 1. / m * np.sum(dZ1, axis=1, keepdims=True)\n",
     "    \n",
     "    gradients = {\"dZ3\": dZ3, \"dW3\": dW3, \"db3\": db3,\n",
     "                 \"dA2\": dA2, \"dZ2\": dZ2, \"dW2\": dW2, \"db2\": db2,\n",
@@ -602,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -652,20 +698,26 @@
     "        #(approx. 3 lines)\n",
     "        # theta_plus =                                        # Step 1\n",
     "        # theta_plus[i] =                                     # Step 2\n",
-    "        # J_plus[i], _ =                                     # Step 3\n",
+    "        # J_plus[i], _ =                                      # Step 3\n",
     "        # YOUR CODE STARTS HERE\n",
     "        \n",
-    "        \n",
+    "        theta_plus = np.copy(parameters_values)\n",
+    "        theta_plus[i] += epsilon\n",
+    "        J_plus[i], _ = forward_propagation_n(X, Y, vector_to_dictionary(theta_plus))\n",
+    "\n",
     "        # YOUR CODE ENDS HERE\n",
     "        \n",
     "        # Compute J_minus[i]. Inputs: \"parameters_values, epsilon\". Output = \"J_minus[i]\".\n",
     "        #(approx. 3 lines)\n",
     "        # theta_minus =                                    # Step 1\n",
     "        # theta_minus[i] =                                 # Step 2        \n",
-    "        # J_minus[i], _ =                                 # Step 3\n",
+    "        # J_minus[i], _ =                                  # Step 3\n",
     "        # YOUR CODE STARTS HERE\n",
     "        \n",
-    "        \n",
+    "        theta_minus = np.copy(parameters_values)\n",
+    "        theta_minus[i] -= epsilon\n",
+    "        J_minus[i], _ = forward_propagation_n(X, Y, vector_to_dictionary(theta_minus))\n",
+    "\n",
     "        # YOUR CODE ENDS HERE\n",
     "        \n",
     "        # Compute gradapprox[i]\n",
@@ -673,6 +725,7 @@
     "        # gradapprox[i] = \n",
     "        # YOUR CODE STARTS HERE\n",
     "        \n",
+    "        gradapprox[i] = (J_plus[i] - J_minus[i]) / (2 * epsilon)\n",
     "        \n",
     "        # YOUR CODE ENDS HERE\n",
     "    \n",
@@ -683,6 +736,9 @@
     "    # difference =                                            # Step 3'\n",
     "    # YOUR CODE STARTS HERE\n",
     "    \n",
+    "    numerator = np.linalg.norm(grad - gradapprox)\n",
+    "    denominator = np.linalg.norm(grad) + np.linalg.norm(gradapprox)\n",
+    "    difference = numerator / denominator\n",
     "    \n",
     "    # YOUR CODE ENDS HERE\n",
     "    if print_msg:\n",
@@ -696,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -712,7 +768,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mYour backward propagation works perfectly fine! difference = 1.1890913024229996e-07\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "X, Y, parameters = gradient_check_n_test_case()\n",
     "\n",
@@ -781,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
